--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    
+    "test": "node --harmony ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
+    "start": "pm2 start index.js --node-args='--harmony' --name 'myblog'"
   },
   "author": "",
   "license": "ISC",
@@ -19,10 +20,15 @@
     "express-session": "^1.15.3",
     "express-winston": "^2.4.0",
     "marked": "^0.3.6",
+    "mocha": "^3.4.2",
     "moment": "^2.18.1",
     "mongolass": "^2.4.5",
     "objectid-to-timestamp": "^1.3.0",
     "sha1": "^1.1.1",
+    "supertest": "^3.0.0",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.5"
   }
 }
