--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    
     "test": "node --harmony ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha",
     "start": "pm2 start index.js --node-args='--harmony' --name 'myblog'"
   },
@@ -29,6 +28,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "cross-env": "^5.0.1",
     "istanbul": "^0.4.5"
   }
 }
